--- a/css/Main.css
+++ b/css/Main.css
@@ -3,7 +3,18 @@
   padding: 0;
 }
 
-#header, #footer {
+#header {
+  padding: 30px 30px 30px 30px;
+  width: 100%;
+  height: 500px;
+  text-align: center;
+  border-bottom: 5px black;
+  background: #333;
+  color: #fff;
+  line-height: 100px;
+  margin-bottom: 50px;
+}
+#footer {
   padding: 30px 30px 30px 30px;
   width: 100%;
   height: 500px;
