--- a/css/Main.css
+++ b/css/Main.css
@@ -1,40 +1,88 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Cypro+Minoan&family=REM:ital,wght@1,900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
 }
+body {
+  height: 2000px;
+}
 
 #header {
-  padding: 30px 30px 30px 30px;
+  margin-bottom: 100px;
   width: 100%;
-  height: 500px;
-  text-align: center;
-  border-bottom: 5px black;
-  background: #333 no-repeat center top;;
+  height: 800px;
   color: #fff;
-  line-height: 100px;
-  margin-bottom: 50px;
+
+}
+.bg_container {
+  position: relative;
+  width: inherit;
+  height: inherit;
+  background-image: url(/home/fainsyy_pro/Fendyx.github.io/Images/Students.jpg);
+  background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+
+
 }
+.content{
+  width: inherit;
+  height: inherit;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+
+#header ul{
+  margin-right: 50px;
+  margin-left: 50px;
+}
+#header ul li {
+  display: inline-block;
+}
+#header ul li:not(:last-of-type){
+  padding-right: 15%;
+}
+
+
 #footer {
   padding: 30px 30px 30px 30px;
   width: 100%;
   height: 500px;
   text-align: center;
-  border-bottom: 5px black;
   background: #333;
   color: #fff;
   line-height: 100px;
-  margin-bottom: 50px;
+  margin-top: 50px;
+  margin-top: 200px;
 }
 
 .flag {
   float: left;
+  width: 660px;
+  height: 380px;
+  transition: 2s;
+}
+.flag:hover {
+  transform: scale(1.15);
+}
+.flag-container {
+  display: flex;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
-#footer {
-  margin-bottom: 0;
-  margin-top: 50px;
-  border-bottom: 0;
-  border-top: 5px black;
+#logo {
+  display: block;
+  border-radius: 50%;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  background-attachment: fixed;
+
+}
+.welcome_text {
+  font-family: 'REM', sans-serif;
+  text-align: center;
 }
