--- a/css/header.css
+++ b/css/header.css
@@ -14,99 +14,85 @@ body {
   width: 100%;
   height: 90vh;
   color: #fff;
+
 }
-.bg_container {
+#inform {
   position: relative;
-  width: inherit;
-  height: inherit;
-  background-image: url(../Images/TheBook_withCofee.png);
-  background-repeat: no-repeat;
+  display: block;
+  background: url('../Images/map_2.jpg') no-repeat;
   background-size: cover;
-  /* background-attachment: fixed; */
-
-
-}
-.content{
-  width: inherit;
-  height: inherit;
-  position: absolute;
-  background: rgba(255, 255, 255, 0.1);
-}
-
-#presents_container{
-  position: relative;
-  width: 45vw;
-  height: 30vh;
-  top: 15vh;
-  left: 8vw;
+  width: 100%;
+  height: 700px;
+  z-index: 1;
   text-align: center;
-
-
-}
-.presents {
-  font-family: 'Goudy Bookletter 1911', serif; 
-  position: relative;
+  font-size: 1.5em;
   color: black;
-  font-size: 5rem;
-  font-style: italic;
-
-}
-.coffee {
-  position: relative;
-  display: inline-block;
-  color: black;
-  top: 32vh;
-  left: 19vw;
-  width: 20vw;
-  height: 30vh;
-}
-.coffee p {
+  font-family:Arial, Helvetica, sans-serif;
   line-height: 50px;
-  font-size: 1.8em;
-  font-weight: bold;
-}
-.coffee_1 {
-  position: absolute;
-  left: 67vw;
-  color: black;
-  line-height: 50px;
-  font-size: 1.8em;
-  font-weight: bold;
-  display: inline-block;
-  width: 300px;
-  height: 300px;
 
 }
-.coffee_1 #third {
-  padding-left: 40px;
-}
+
 
 #logo {
   position: absolute;
-  display: block;
+  display: inline-block;
+  z-index: 2;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   margin-bottom: 20px;
-  left: 8vw;
-  top: 7vh;
-  background-attachment: fixed;
+  left: 50px;
+  top: 75px;
+}
 
-}
-nav {
-  position: relative;
-  width: 100%;
-  height: 200px;
-  border: 1px solid black;
-  text-align: center;
-  background: blue;
 
-}
-nav li {
-  display: inline-block;
-  margin-right: 100px;
-  font-size: 1.3em;
-}
-nav li a {
-  text-decoration: none;
+ #login_register {
+  position: absolute;
+  z-index: 3;
+  left: 1650px;
+  top: 20px;
+  color: black;
+  font-size: 1.5em;
+ }
+ #login_register a {
   color: white;
-}
+  text-decoration: none;
+ }
+
+ #login_register a:hover {
+  text-decoration: underline;
+ }
+
+ .BigPolyglot {
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+  height: auto;
+  border: 2px solid black;
+  background: white;
+ }
+
+ .goat {
+  position: relative;
+  float: left;
+  left: 200px;
+  top: 200px;
+  width: 500px;
+  height: auto;
+  border: 2px solid black;
+  background: white;
+ }
+
+ .goat_1 {
+  position: relative;
+  float: right;
+  right: 200px;
+  top: 200px;
+  width: 500px;
+  height: auto;
+  border: 2px solid black;
+  background: white;
+ }
+
+
 
