--- a/css/footer.css
+++ b/css/footer.css
@@ -4,9 +4,10 @@
 }
 
 #footer {
-    position: relative;
+    position: absolute;
+    padding: 50px;
     display: flex;
-    padding: 5%;
+    justify-content: space-around;
     background: blue;
     width: 100%;
     height: 600px;
@@ -14,29 +15,29 @@
 }
 #contacts {
     position: relative;
-    width: 30%
+    width:30%;
 }
 #follow_us {
     position: relative;
+    width: 30%;
 }
 #Tests {
     position: relative;
+    width: 30%;
 }
 
 .logo_footer{
     position: relative;
+    top: 15px;
     float: left;
-    width: 100px;
+    width: 40px;
     height: auto;
     margin-right: 20px;
 }
 
-#contacts div {
-    border: 2px solid black;
-    height: 100px;
-    padding-top: auto;
+.footer_ul {
+    display: flex;
+    flex-direction: column;
+    line-height: 70px;
 }
 
-ul li p {
-    display: inline;
-}
