--- a/css/Register.css
+++ b/css/Register.css
@@ -5,10 +5,17 @@
     margin: 0;
     padding: 0;
 }
-/* #main {
-    background: url('../Images/bg.png');
-} */
-
+#main {
+    background: url('../Images/bg_2.png');
+}
+.p_main {
+    position: absolute;
+    top: 230px;
+    left: 39%;
+    font-weight: bold;
+    font-size: 1.8em;
+    letter-spacing: 5px;
+}
 #heading{
     display: flex;
     justify-content: center;
@@ -35,6 +42,7 @@
     margin-left: auto;
     margin-top: 50px;
     padding: 50px;
+    padding-top: 70px;
     border: 6px solid black;
     border-radius: 50px;
     box-sizing: border-box;
@@ -42,7 +50,6 @@
     font-size: 1.5em;
     font-family: 'Ubuntu', sans-serif;
     justify-content: center;
-    background: #c9c9c9;
     overflow: scroll;
 }
 
@@ -63,7 +70,7 @@
     height: 30px;
     border-radius: 50px;
     background: white;
-    font-size: 1.07em;
+    text-align: center;
 }
 
 
@@ -105,23 +112,4 @@
 a {
     position: absolute;
 
-}
-
-#polite {
-    position: relative;
-    width: 80%;
-    height: 700px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 50px;
-    padding: 50px;
-    border: 6px solid black;
-    border-radius: 50px;
-    box-sizing: border-box;
-    line-height: 60px;
-    font-size: 1.5em;
-    background: white;
-    font-family: 'Ubuntu', sans-serif;
-    background: #c9c9c9;
-    overflow: scroll;
 }
