--- a/css/main.css
+++ b/css/main.css
@@ -59,5 +59,25 @@ i {
   border-radius: 50px;
 }
 
+#to_registrate {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  background: lightblue;
+  width: 400px;
+  height: 100px;
+  border: 3px solid purple;
+  border-radius: 50px;
+  font-size: 1.7em;
+  font-weight: bold;
+  display:flex;
+  justify-content: center;
+  box-sizing: border-box;
+}
+#to_registrate p {
+  position: relative;
+  top: 30%;
+}
 
 
