--- a/css/nav.css
+++ b/css/nav.css
@@ -31,3 +31,14 @@ nav {
   nav li a:hover{
     text-decoration: underline;
   }
+  #logo {
+    position: absolute;
+    display: inline-block;
+    z-index: 2;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    left: 50px;
+    top: 75px;
+  }
